<resources>
    <string name="app_name">Sportify</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_new_contest">new contest</string>
    <string name="create_new_event">Create new Event</string>
    <string name="duration">DURATION</string>
    <string name="max_number_of_players">Max Number Of Players</string>
    <string name="free">FREE</string>
    <string name="tg">TG</string>
    <string name="price">PRICE</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="location">Location</string>
    <string name="level">Choose Level</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="reminders">REMINDERS</string>
    <string name="notification">Notification</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="join">JOIN</string>
    <string name="filter">FILTER</string>
    <string name="current_events">Current Events</string>
    <string name="search_event">Search Event</string>
    <string name="organizer">Organizer</string>
    <string name="is_logged_in_key">is_logged_in</string>
    <string name="user_id">user_id</string>
</resources>