<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sportify.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.sportify.presentation.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
    </fragment>

    <fragment
        android:id="@+id/navigation_new_contest"
        android:name="com.example.sportify.presentation.newcontest.NewContestFragment"
        android:label="@string/title_new_contest"
        tools:layout="@layout/fragment_new_contest" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.sportify.presentation.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sportify.presentation.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_accountInformationFragment"
            app:destination="@id/accountInformationFragment" />
    </fragment>

    <fragment
        android:id="@+id/accountInformationFragment"
        android:name="com.example.sportify.presentation.profile.AccountInformationFragment"
        android:label="Edit Account Info"
        tools:layout="@layout/fragment_account_edit" />


</navigation>