<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/create_new_event"
                android:textColor="@color/green1"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />

            <AutoCompleteTextView
                android:id="@+id/event_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/level"
                android:inputType="none"/>

            <EditText
                android:id="@+id/event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:ems="10"
                android:hint="@string/location"
                android:inputType="text" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:hint="@string/select_date"
                    android:padding="10dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/select_time"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/duration"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/event_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/price"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green1"
                        app:layout_constraintBottom_toTopOf="@+id/price"
                        app:layout_constraintEnd_toEndOf="@+id/price" />

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView" />


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="bottom"
                        android:text="@string/tg"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/freeCheckbox" />

                    <CheckBox
                        android:id="@+id/freeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/free"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <EditText
                android:id="@+id/maxPlayersEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/max_number_of_players"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/description"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/reminders"
                    android:textColor="@color/green1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/notificationCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/green1"
                        android:text="@string/notification"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <CheckBox
                        android:id="@+id/emailCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/green1"
                        android:text="@string/email"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp">

                <Button
                    android:id="@+id/createButton"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_background"
                    android:text="@string/create"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:backgroundTint="@color/green1" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>


</LinearLayout>